--- a/package.json
+++ b/package.json
@@ -46,7 +46,9 @@
     "webpack-dev-server": "2.3.0"
   },
   "dependencies": {
+    "id-generator": "^1.1.0",
     "react": "15.4.2",
-    "react-dom": "15.4.2"
+    "react-dom": "15.4.2",
+    "uuid": "^3.3.2"
   }
 }
