--- a/chatty_server/package.json
+++ b/chatty_server/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "4.17.1",
+    "uuid": "^3.3.2",
     "ws": "7.0.1"
   },
   "optionalDependencies": {
